# tessera

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ui.yml
cmd/proxyctl/: bootstrap.go  cmd.go  main.go
cmd/proxyd/: main.go
cmd/tessera/: main.go
cmd/tessera-cli/: bootstrap.go  ca.go  client.go  cmd.go  exec.go  exec_test.go  main.go
config/: example.yaml
docs/: architecture.md  index.html  linkedin-article.md
docs/site/: index.html
examples/: README.md
examples/policies/: github-issues-read.rego  openai-chat-only.rego  read-only.rego
examples/scripts/: add-policy.sh  add-upstream.sh  mint-token.sh
internal/admin/: admin_test.go  attenuate.go  attenuate_test.go  ca.go  ca_install_darwin.go  ca_install_other.go  ca_test.go  handlers.go  mint.go  policies.go  revoke.go  socket.go  unlock.go  unlock_test.go  upstreams.go
internal/audit/: events.go  logger.go  logger_test.go  rotate.go  rotate_test.go
scripts/: smoke.sh
skills/: README.md
ui/: package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: audit.rs  clipboard.rs  error.rs  keychain.rs  lib.rs  main.rs  socket.rs  types.rs
ui/src-tauri/src/commands/: bootstrap.rs  mod.rs  policies.rs  status.rs  tokens.rs  upstreams.rs
(+107 files in other folders)
